aws/x-ray/eks/appmesh/app/app-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app-ns
  # enable app mesh controller to inject Envoy onto each pode
  labels:
    mesh: my-mesh
    appmesh.k8s.aws/sidecarInjectorWebhook: enabled
