aws/x-ray/eks/appmesh/app/app-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
  labels:
    app: app1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      serviceAccountName: app1-svc
      containers:
        - name: app1
          image: 372853230800.dkr.ecr.ap-northeast-1.amazonaws.com/myapp-app1:0.2
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              port: 80
              path: /health
            initialDelaySeconds: 15
            periodSeconds: 30
          livenessProbe:
            httpGet:
              port: 80
              path: /health
            initialDelaySeconds: 30
            periodSeconds: 30
          #          resources:
          #            requests:
          #              cpu: 100m
          #              memory: 512Mi
          #            limits:
          #              cpu: 250m
          #              memory: 768Mi
          lifecycle:
            preStop:
              exec:
                command: ["/bin/sh", "-c", "sleep 2"]
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2
  labels:
    app: app2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2
    spec:
      serviceAccountName: app2-svc
      containers:
        - name: app2
          image: 372853230800.dkr.ecr.ap-northeast-1.amazonaws.com/myapp-app2:0.2
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          readinessProbe:
            httpGet:
              port: 5000
              path: /health
            initialDelaySeconds: 15
            periodSeconds: 30
          livenessProbe:
            httpGet:
              port: 5000
              path: /health
            initialDelaySeconds: 30
            periodSeconds: 30
          #          resources:
          #            requests:
          #              cpu: 100m
          #              memory: 512Mi
          #            limits:
          #              cpu: 250m
          #              memory: 768Mi
          lifecycle:
            preStop:
              exec:
                command: ["/bin/sh", "-c", "sleep 2"]
