aws/x-ray/eks/appmesh/app/app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1-svc
  namespace: app-ns
spec:
  type: ClusterIP
  selector:
    app: app1
  ports:
    - protocol: TCP
      port: 2080
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app2-svc
  namespace: app-ns
spec:
  type: LoadBalancer
  selector:
    app: app2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
